src/test/ui/variable-fn-name-collision.stderr
error[E0618]: expected function, found `Model`
  --> $DIR/variable-fn-name-collision.rs:20:13
   |
20 |     model = model(model);
   |             ^^^^^^^^^^^^
   |
note: defined here
  --> $DIR/variable-fn-name-collision.rs:19:9
   |
19 |     let mut model = Model { x: 0 };
   |         ^^^^^^^^^
   = help: it's better to pick different names between variables and functions

error[E0618]: expected function, found `Foo`
  --> $DIR/variable-fn-name-collision.rs:21:5
   |
21 |     Foo();
   |     ^^^^^
   |
note: defined here
  --> $DIR/variable-fn-name-collision.rs:12:1
   |
12 | struct Foo;
   | ^^^^^^^^^^^

error: aborting due to 2 previous errors

